--- a/app/main/main.html
+++ b/app/main/main.html
@@ -24,7 +24,7 @@
 
             <div id="servicios-list">
                 <div id="servicio-01" class="servicio">
-                    <div class="servicio-icono"></div>
+                    <img src="" class="servicio-icono">
                     <div class="servicio-texto">
                         <div class="servicio-titulo">Financiamiento</div>
                         <div class="servicio-detalle">Alternativa más económica al momento de sellar sus documentos.
