--- a/app/index.html
+++ b/app/index.html
@@ -46,6 +46,37 @@
 
 <div ng-view></div>
 
+<div id="contacto">
+
+    <div>Contacto</div>
+
+    <div id="contacto-container">
+
+        <div>
+            <input type="text" id="nombre">
+            <input type="text" id="apellido">
+            <input type="text" id="mail">
+        </div>
+        <div>
+            <textarea name="" id="consulta" rows="10"></textarea>
+        </div>
+        <div>
+            <button>Enviar</button>
+        </div>
+    </div>
+
+
+</div>
+<div id="footer">
+    <div>INICIO</div> -
+    <div>INSTITUCIONAL</div> -
+    <div>CLASIFICADOS</div> -
+    <div>AGENDA</div> -
+    <div>CONTACTO</div> -
+    <div>REVISTA</div>
+
+</div>
+
 <!-- In production use:
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
 -->
