--- a/app/index.html
+++ b/app/index.html
@@ -56,12 +56,13 @@
             <input type="text" id="nombre">
             <input type="text" id="apellido">
             <input type="text" id="mail">
+            <button id="contacto-enviar-desktop">Enviar</button>
         </div>
         <div>
             <textarea name="" id="consulta" rows="10"></textarea>
         </div>
         <div>
-            <button>Enviar</button>
+            <button id="contacto-enviar-mobile">Enviar</button>
         </div>
     </div>
 
