--- a/app/main/main.html
+++ b/app/main/main.html
@@ -63,7 +63,7 @@
                 <div id="noticia-01" class="noticia">
                     <img src="" alt=""/>
 
-                    <h2>Noticia</h2>
+                    <h2>La unión industrial criticó los acuerdos económicos con China</h2>
 
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis metus lorem. Vivamus lobortis,
                         felis ut feugiat commodo, sapien libero rhoncus tortor, molestie condimentum tortor nisi in
@@ -82,7 +82,7 @@
                 <div id="noticia-02" class="noticia">
                     <img src="" alt=""/>
 
-                    <h2>Noticia</h2>
+                    <h2>La unión industrial criticó los acuerdos económicos con China</h2>
 
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis metus lorem. Vivamus lobortis,
                         felis ut feugiat commodo, sapien libero rhoncus tortor, molestie condimentum tortor nisi in
@@ -101,7 +101,7 @@
                 <div id="noticia-03" class="noticia">
                     <img src="" alt=""/>
 
-                    <h2>Noticia</h2>
+                    <h2>La unión industrial criticó los acuerdos económicos con China</h2>
 
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis metus lorem. Vivamus lobortis,
                         felis ut feugiat commodo, sapien libero rhoncus tortor, molestie condimentum tortor nisi in
