--- a/app/index.html
+++ b/app/index.html
@@ -55,7 +55,7 @@
 <!--NG-VIEW-->
 
 
-<div ng-view></div>
+<div ng-view class="view-container"></div>
 
 <div id="contacto">
 
@@ -86,15 +86,20 @@
     <div>AGENDA</div> -
     <div>CONTACTO</div> -
     <div>REVISTA</div>
+    <div>INGRESO</div>
 
 </div>
 
 <!-- In production use:
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
 -->
-<script src="bower_components/angular/angular.js"></script>
-<script src="bower_components/angular-route/angular-route.js"></script>
+<script src="bower_components/angular/angular.min.js"></script>
+<script src="bower_components/angular-route/angular-route.min.js"></script>
+<script src="bower_components/angular-cookies/angular-cookies.min.js"></script>
+<script src="bower_components/ac-angular-login-carrito/app/login.js"></script>
 <script src="app.js"></script>
 <script src="main/main.js"></script>
+<script src="ingreso/ingreso.js"></script>
+<script src="administracion/administracion.js"></script>
 </body>
 </html>
