--- a/app/index.html
+++ b/app/index.html
@@ -32,9 +32,12 @@
         <div class="header-separator"></div>
         <div class="logo"></div>
     </div>
+
     <div class="menu-desktop menu-type-desktop">
 
-        <div id="menu-desktop-logo"></div>
+        <div id="menu-desktop-logo">
+            <img src="../img/logo.png" alt="logo" height="100px" width="100px">
+                    </div>
         <div id="menu-desktop-right">
             <div id="menu-desktop-upper"></div>
             <div id="menu-desktop-lower">
