--- a/app/main/main.html
+++ b/app/main/main.html
@@ -41,7 +41,7 @@
 
             <div id="servicios-list">
                 <div id="servicio-01" class="servicio">
-                    <img src="" class="servicio-icono">
+                    <img src="../img/servicio_01.png" class="servicio-icono">
 
                     <div class="servicio-texto">
                         <div class="servicio-titulo">Financiamiento</div>
