--- a/app/index.html
+++ b/app/index.html
@@ -21,7 +21,7 @@
 <body ng-controller="AppController as appCtrl">
 
 <div class="header">
-    <div class="menu-mobile menu-type-mobile" >
+    <div class="menu-mobile menu-type-mobile">
         <div class="nav-button"
              ng-click="appCtrl.menu_mobile_open = !appCtrl.menu_mobile_open;"
              ng-class="{'nav-button-transformed':navCtrl.closed}">
@@ -36,8 +36,8 @@
     <div class="menu-desktop menu-type-desktop">
 
         <div id="menu-desktop-logo">
-            <img src="../img/logo.png" alt="logo" height="100px" width="100px">
-                    </div>
+            <img src="img/logo.png" alt="logo" height="100px" width="100px">
+        </div>
         <div id="menu-desktop-right">
             <div id="menu-desktop-upper"></div>
             <div id="menu-desktop-lower">
@@ -83,11 +83,16 @@
 
 </div>
 <div id="footer">
-    <div>INICIO</div> -
-    <div>INSTITUCIONAL</div> -
-    <div>CLASIFICADOS</div> -
-    <div>AGENDA</div> -
-    <div>CONTACTO</div> -
+    <div>INICIO</div>
+    -
+    <div>INSTITUCIONAL</div>
+    -
+    <div>CLASIFICADOS</div>
+    -
+    <div>AGENDA</div>
+    -
+    <div>CONTACTO</div>
+    -
     <div>REVISTA</div>
     <div>INGRESO</div>
 
