--- a/app/main/main.html
+++ b/app/main/main.html
@@ -41,7 +41,7 @@
 
             <div id="servicios-list">
                 <div id="servicio-01" class="servicio">
-                    <img src="../img/servicio_01.svg" class="servicio-icono">
+                    <img src="img/servicio_01.svg" class="servicio-icono">
 
                     <div class="servicio-texto">
                         <div class="servicio-titulo">Financiamiento</div>
@@ -262,7 +262,7 @@
                 <div id="empresas-list">
 
                     <div class="empresa" ng-repeat="empresa in mainCtrl.empresas">
-                        <img src="../img/empresa.png.png" alt="empresa.nombre">
+                        <img src="img/empresa.png.png" alt="empresa.nombre">
                     </div>
                 </div>
 
