--- a/app/index.html
+++ b/app/index.html
@@ -105,10 +105,13 @@
 <script src="bower_components/angular-route/angular-route.min.js"></script>
 <script src="bower_components/angular-cookies/angular-cookies.min.js"></script>
 <script src="bower_components/angular-animate/angular-animate.min.js"></script>
+<script src="bower_components/a0-angular-storage/dist/angular-storage.min.js"></script>
+<script src="bower_components/angular-jwt/dist/angular-jwt.min.js"></script>
 <script src="bower_components/ac-angular-login-carrito/app/login.js"></script>
 <script src="app.js"></script>
 <script src="main/main.js"></script>
 <script src="ingreso/ingreso.js"></script>
 <script src="administracion/administracion.js"></script>
+<script src="ofertas_laborales/ofertas_laborales.js"></script>
 </body>
 </html>
