--- a/app/ingreso/ingreso.html
+++ b/app/ingreso/ingreso.html
@@ -6,14 +6,14 @@
     <div id="ingreso-form">
         <div class="administracion-input">
             <span>NOMBRE DE USUARIO</span>
-            <input type="text">
+            <input type="text" ng-model="ingresoCtrl.mail">
         </div>
         <div class="administracion-input">
             <span>CONTRASEÑA</span>
-            <input type="password">
+            <input type="password" ng-model="ingresoCtrl.password">
         </div>
         <div  class="administracion-button-bar">
-            <button>OK</button>
+            <button ng-click="ingresoCtrl.login();">OK</button>
             <button>NUEVO USUARIO</button>
         </div>
 
