--- a/app/administracion/administracion.html
+++ b/app/administracion/administracion.html
@@ -211,6 +211,9 @@
             <button>GUARDAR</button>
         </div>
     </div>
+    <div class="administracion-button-bar">
+        <button ng-click="administracionCtrl.logout();">SALIR</button>
+    </div>
 
 
 </div>
