--- a/app/index.html
+++ b/app/index.html
@@ -112,6 +112,7 @@
 <script src="main/main.js"></script>
 <script src="ingreso/ingreso.js"></script>
 <script src="administracion/administracion.js"></script>
+<script src="institucional/institucional.js"></script>
 <script src="ofertas_laborales/ofertas_laborales.js"></script>
 </body>
 </html>
