--- a/app/ingreso/ingreso.html
+++ b/app/ingreso/ingreso.html
@@ -14,7 +14,7 @@
         </div>
         <div  class="administracion-button-bar">
             <button ng-click="ingresoCtrl.login();">OK</button>
-            <button>NUEVO USUARIO</button>
+            <button ng-click="ingresoCtrl.nuevoUsuario();">NUEVO USUARIO</button>
         </div>
 
     </div>
