--- a/app/index.html
+++ b/app/index.html
@@ -114,5 +114,6 @@
 <script src="administracion/administracion.js"></script>
 <script src="institucional/institucional.js"></script>
 <script src="ofertas_laborales/ofertas_laborales.js"></script>
+<script src="nuevo_usuario/nuevo_usuario.js"></script>
 </body>
 </html>
