--- a/app/ingreso/ingreso.html
+++ b/app/ingreso/ingreso.html
@@ -1,22 +1,1 @@
-<div ng-controller="IngresoController as ingresoCtrl" id="ingreso">
-    <div id="ingreso-titulo" class="administracion-title">
-        INGRESO
-    </div>
-
-    <div id="ingreso-form">
-        <div class="administracion-input">
-            <span>NOMBRE DE USUARIO</span>
-            <input type="text" ng-model="ingresoCtrl.mail">
-        </div>
-        <div class="administracion-input">
-            <span>CONTRASEÑA</span>
-            <input type="password" ng-model="ingresoCtrl.password">
-        </div>
-        <div  class="administracion-button-bar">
-            <button ng-click="ingresoCtrl.login();">OK</button>
-            <button ng-click="ingresoCtrl.nuevoUsuario();">NUEVO USUARIO</button>
-        </div>
-
-    </div>
-
-</div>
+<div ng-controller="IngresoController as ingresoCtrl" id="ingreso">    <div id="ingreso-titulo" class="administracion-title">        INGRESO    </div>    <div id="ingreso-form">        <div class="administracion-input">            <span>NOMBRE DE USUARIO</span>            <input type="text" ng-model="ingresoCtrl.mail">        </div>        <div class="administracion-input">            <span>CONTRASEÑA</span>            <input type="password" ng-model="ingresoCtrl.password">        </div>        <div  class="administracion-button-bar">            <button ng-click="ingresoCtrl.login();">OK</button>            <button ng-click="ingresoCtrl.nuevoUsuario();">NUEVO USUARIO</button>        </div>    </div></div>
