--- a/app/index.html
+++ b/app/index.html
@@ -114,12 +114,13 @@
 <script src="bower_components/angular-jwt/dist/angular-jwt.min.js"></script>
 <script src="bower_components/ac-angular-login-carrito/app/login.js"></script>
 <script src="ac-ripple-button/ac-ripple-button.js"></script>
-<script src="app.js"></script>
-<script src="main/main.js"></script>
+<script src="app.min.js"></script>
+<script src="main/main.min.js"></script>
 <script src="ingreso/ingreso.js"></script>
 <script src="administracion/administracion.js"></script>
 <script src="institucional/institucional.js"></script>
 <script src="ofertas_laborales/ofertas_laborales.js"></script>
 <script src="nuevo_usuario/nuevo_usuario.js"></script>
+<script src="noticias/noticias.min.js"></script>
 </body>
 </html>
