--- a/app/index.html
+++ b/app/index.html
@@ -122,5 +122,6 @@
 <script src="ofertas_laborales/ofertas_laborales.js"></script>
 <script src="nuevo_usuario/nuevo_usuario.js"></script>
 <script src="noticias/noticias.min.js"></script>
+<script src="busquedas_laborales/busquedas_laborales.min.js"></script>
 </body>
 </html>
