--- a/app/busquedas_laborales/busquedas_laborales.html
+++ b/app/busquedas_laborales/busquedas_laborales.html
@@ -6,10 +6,10 @@
 
     </div>
     <div id="busqueda-laboral-search">
-        <input type="text" placeholder="Ingrese los terminos relacionados a su búsqueda...">
+        <input type="text" placeholder="Ingrese los terminos relacionados a su búsqueda..." ng-model="busquedasLaboralesCtrl.filter">
     </div>
     <div id="busquedas-laborales-form">
-        <div class="busqueda-laboral" ng-repeat="busqueda in busquedasLaboralesCtrl.busquedas">
+        <div class="busqueda-laboral" ng-repeat="busqueda in busquedasLaboralesCtrl.busquedas | filter:busquedasLaboralesCtrl.filter">
             <div class="busqueda-laboral-title">{{busqueda.titulo}}</div>
             <div class="busqueda-laboral-texto">{{busqueda.detalle}}</div>
             <div class="busqueda-laboral-contacto">{{busqueda.contacto}}</div>
