--- a/app/index.html
+++ b/app/index.html
@@ -114,6 +114,7 @@
 <script src="bower_components/angular-jwt/dist/angular-jwt.min.js"></script>
 <script src="bower_components/ac-angular-login-carrito/app/login.js"></script>
 <script src="ac-ripple-button/ac-ripple-button.js"></script>
+<script src="bower_components/ac-angular-noticias/ac-noticias.min.js"></script>
 <script src="app.min.js"></script>
 <script src="main/main.min.js"></script>
 <script src="ingreso/ingreso.js"></script>
