--- a/app/index.html
+++ b/app/index.html
@@ -112,11 +112,13 @@
 <script src="bower_components/angular-animate/angular-animate.min.js"></script>
 <script src="bower_components/a0-angular-storage/dist/angular-storage.min.js"></script>
 <script src="bower_components/angular-jwt/dist/angular-jwt.min.js"></script>
+<script src="bower_components/angular-toastr/dist/angular-toastr.min.js"></script>
 <script src="bower_components/ac-angular-login-carrito/app/login.js"></script>
 <script src="ac-ripple-button/ac-ripple-button.js"></script>
 <script src="bower_components/ac-angular-noticias/ac-noticias.js"></script>
-<script src="app.min.js"></script>
-<script src="main/main.min.js"></script>
+<script src="bower_components/ac-angular-slider-manager/slider-manager.js"></script>
+<script src="app.js"></script>
+<script src="main/main.js"></script>
 <script src="ingreso/ingreso.js"></script>
 <script src="administracion/administracion.js"></script>
 <script src="institucional/institucional.js"></script>
