--- a/app/index.html
+++ b/app/index.html
@@ -126,5 +126,6 @@
 <script src="nuevo_usuario/nuevo_usuario.js"></script>
 <script src="noticias/noticias.js"></script>
 <script src="busquedas_laborales/busquedas_laborales.js"></script>
+<script src="servicios/servicios.js"></script>
 </body>
 </html>
