--- a/app/index.html
+++ b/app/index.html
@@ -117,6 +117,7 @@
 <script src="ac-ripple-button/ac-ripple-button.js"></script>
 <script src="bower_components/ac-angular-noticias/ac-noticias.js"></script>
 <script src="bower_components/ac-angular-slider-manager/slider-manager.js"></script>
+<script src="http://e.issuu.com/embed.js" async="true"></script>
 <script src="app.js"></script>
 <script src="main/main.js"></script>
 <script src="ingreso/ingreso.js"></script>
@@ -127,5 +128,6 @@
 <script src="noticias/noticias.js"></script>
 <script src="busquedas_laborales/busquedas_laborales.js"></script>
 <script src="servicios/servicios.js"></script>
+<script src="revistas/revistas.js"></script>
 </body>
 </html>
