--- a/app/revistas/revistas.html
+++ b/app/revistas/revistas.html
@@ -1,7 +1,12 @@
-<div ng-controller="ServiciosController as serviciosCtrl" id="servicios-inner">
-    <div id="servicios-titulo" class="servicios-title">
-        HOLA {{serviciosCtrl.usuario.nombre}}
+<div ng-controller="RevistasController as revistasCtrl" id="revistas">
+    <div id="revistas-titulo" class="revistas-title">
+        HOLA {{revistasCtrl.usuario.nombre}}
     </div>
+
+
+    <div data-configid="9112363/15317091" style="width:400px; height:229px;" class="issuuembed"></div>
+    <div data-configid="9112363/15317091" style="width:400px; height:229px;" class="issuuembed"></div>
+
 
 
 </div>
