--- a/app/index.html
+++ b/app/index.html
@@ -44,7 +44,7 @@
             <div id="menu-desktop-lower">
 
                 <div class="menu-desktop-btn ac-ripple"
-                     ng-class="{'menu-desktop-btn-selected':appCtrl.selectedPage == link.nombre}"
+                     ng-class="{'menu-desktop-btn-selected':appCtrl.selectedPage.indexOf(link.nombre) > -1 }"
                      ripple-color="#ffffff"
                      ng-repeat="link in appCtrl.links"
                      ng-click="appCtrl.goTo(link);"> {{link.nombre}}</div>
